# pkg/ent/facttype.go
@@ -21,6 +21,10 @@ type FactType struct {
 	CreateTime time.Time `json:"create_time,omitempty"`
 	// UpdateTime holds the value of the "update_time" field.
 	UpdateTime time.Time `json:"update_time,omitempty"`
+	// Slug holds the value of the "slug" field.
+	Slug string `json:"slug,omitempty"`
+	// Builtin holds the value of the "builtin" field.
+	Builtin bool `json:"builtin,omitempty"`
 	// Edges holds the relations/edges for other nodes in the graph.
 	// The values are being populated by the FactTypeQuery when eager-loading is set.
 	Edges FactTypeEdges `json:"edges"`
@@ -49,6 +53,10 @@ func (*FactType) scanValues(columns []string) ([]interface{}, error) {
 	values := make([]interface{}, len(columns))
 	for i := range columns {
 		switch columns[i] {
+		case facttype.FieldBuiltin:
+			values[i] = &sql.NullBool{}
+		case facttype.FieldSlug:
+			values[i] = &sql.NullString{}
 		case facttype.FieldCreateTime, facttype.FieldUpdateTime:
 			values[i] = &sql.NullTime{}
 		case facttype.FieldID:
@@ -85,6 +93,18 @@ func (ft *FactType) assignValues(columns []string, values []interface{}) error {
 				return fmt.Errorf("unexpected type %T for field update_time", values[i])
 			} else if value.Valid {
 				ft.UpdateTime = value.Time
+			}
+		case facttype.FieldSlug:
+			if value, ok := values[i].(*sql.NullString); !ok {
+				return fmt.Errorf("unexpected type %T for field slug", values[i])
+			} else if value.Valid {
+				ft.Slug = value.String
+			}
+		case facttype.FieldBuiltin:
+			if value, ok := values[i].(*sql.NullBool); !ok {
+				return fmt.Errorf("unexpected type %T for field builtin", values[i])
+			} else if value.Valid {
+				ft.Builtin = value.Bool
 			}
 		}
 	}
@@ -123,6 +143,10 @@ func (ft *FactType) String() string {
 	builder.WriteString(ft.CreateTime.Format(time.ANSIC))
 	builder.WriteString(", update_time=")
 	builder.WriteString(ft.UpdateTime.Format(time.ANSIC))
+	builder.WriteString(", slug=")
+	builder.WriteString(ft.Slug)
+	builder.WriteString(", builtin=")
+	builder.WriteString(fmt.Sprintf("%v", ft.Builtin))
 	builder.WriteByte(')')
 	return builder.String()
 }
